# softartf

./: .gitignore  Cargo.toml  README.md
softartf/: Cargo.toml  README.md
softartf/src/: lib.rs  math.rs  plotterV2.rs  test.rs  test_data.rs
softartf/src/math/: convolutions.rs  filters.rs  inst_freq.rs  instrumental_math.rs  interpolate.rs  resampling.rs
softartf/src/structs/: Averaging.rs  CycleBuffer.rs  FIFCompute.rs  FrSqIFCompute.rs  FreqReprArr.rs  FreqReprMap.rs  ImfsFrame.rs  PaddedSignalComplex.rs  TfFrameArr.rs  TfFrameMap.rs
softartf_enums/: Cargo.toml
softartf_enums/src/: lib.rs
softartf_for_embedded/: Cargo.toml
softartf_for_embedded/src/: lib.rs  math.rs  structs.rs  test.rs  test_data.rs
softartf_for_embedded/src/math/: convolutions.rs  ffts.rs  filters.rs  inst_freq.rs  instrumental_math.rs  interpolate.rs  resampling.rs
softartf_for_embedded/src/structs/: FIFCompute.rs  FrSqIFCompute.rs  FreqReprArr.rs  FreqReprMap.rs  ImfsFrame.rs  PaddedSignalComplex.rs  TfFrameArr.rs  TfFrameMap.rs
