[package]
name = "softartf_for_embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
num-complex = "0.4.2"
once_cell = "1.16.0"
rustfft = "6.1.0"
softartf_enums = { path = "../softartf_enums" }
softartf = { path = "../softartf" }


[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3